internal/xds/translator/testdata/out/xds-ir/dns-lookup-family.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/envoy-gateway/policy-for-gateway-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
        envoy.filters.http.filter_chain.eep.listener:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          disabled: true
        envoy.filters.http.filter_chain.eep.route:
          '@type': type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfigPerRoute
          filterChain:
            filters:
            - name: envoy.filters.http.ext_proc/0
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                grpcService:
                  envoyGrpc:
                    authority: backend-fqdn2.default:9090
                    clusterName: envoyextensionpolicy/default/policy-for-httproute/extproc/0
                  timeout: 10s
                processingMode:
                  requestHeaderMode: SKIP
                  requestTrailerMode: SKIP
                  responseHeaderMode: SKIP
                  responseTrailerMode: SKIP
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: GRPCRoute
              name: grpcroute-1
              namespace: default
      name: grpcroute/default/grpcroute-1/rule/0/match/-1/*
      route:
        cluster: grpcroute/default/grpcroute-1/rule/0
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/envoy-gateway/policy-for-gateway-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
